[gd_scene load_steps=10 format=1]

[ext_resource path="res://rcos_core/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://modules/remote_connector/interface_widget_container.gd" type="Script" id=2]
[ext_resource path="res://data_router/icons/32/host_icon_frame.png" type="Texture" id=3]
[ext_resource path="res://data_router/icons/32/question_mark.png" type="Texture" id=4]
[ext_resource path="res://rcos_core/fonts/teko/bitmap/teko-regular-16.fnt" type="BitmapFont" id=5]
[ext_resource path="res://rcos_core/fonts/font_awesome/Font Awesome 5 Free-Solid-900.otf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = 2.0
content_margin/right = 2.0
content_margin/top = 2.0
content_margin/bottom = 2.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 1
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=3]

font/size = 16
extra_spacing/top = -5
extra_spacing/bottom = -5
extra_spacing/char = -5
extra_spacing/space = -5
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[node name="interface_widget_container" type="PanelContainer"]

rect/min_size = Vector2( 196, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 2 )

[node name="bg_panel" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 189.0
margin/bottom = 51.0

[node name="bg_color_frame" type="ColorFrame" parent="."]

visibility/visible = false
visibility/self_opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 2.0
margin/right = 194.0
margin/bottom = 46.0
color = Color( 0, 0, 0, 1 )

[node name="vbox" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 2.0
margin/right = 194.0
margin/bottom = 46.0
alignment = 0

[node name="header" type="Container" parent="vbox"]

rect/min_size = Vector2( 100, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 40.0

[node name="frame" type="Panel" parent="vbox/header"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 2 )

[node name="frame_color" type="ColorFrame" parent="vbox/header/frame"]

visibility/self_opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0, 0, 0, 1 )

[node name="hbox" type="HBoxContainer" parent="vbox/header"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="icon_frame" type="TextureFrame" parent="vbox/header/hbox"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="icon" type="TextureFrame" parent="vbox/header/hbox/icon_frame"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="label" type="Label" parent="vbox/header/hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 44.0
margin/top = 11.0
margin/right = 148.0
margin/bottom = 28.0
custom_fonts/font = ExtResource( 5 )
text = "Host"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="buttons" type="Container" parent="vbox/header/hbox"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 152.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 40.0

[node name="edit_button" type="Button" parent="vbox/header/hbox/buttons"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 5.0
margin/bottom = 5.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ÔÅÑ"
flat = false

[node name="MarginContainer" type="MarginContainer" parent="vbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 44.0
margin/right = 192.0
margin/bottom = 44.0
custom_constants/margin_left = 40

[node name="interface_widgets" type="VBoxContainer" parent="vbox/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 0.0
custom_constants/separation = 0
alignment = 0


